--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,7 @@ body {
 
 .appointment {
     background-color: var(--color-primary);
-    height: 100vh;
+    height: 160vh;
     padding: 100px 0;
     background-image: url(../image/chair-ic.png);
     background-position: right bottom;
@@ -280,55 +280,62 @@ body {
     display: block;
 }
 .appointment .formulario {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    border: 3px solid red;
-    width: 60%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1rem;
+    background-color: #a38f78aa;
+    width: 80%;
     margin: 0 auto;
+    padding: 1rem;
 }
 .appointment .formulario .input-box {
     display: flex;
-    flex-direction: row;
-    gap: 1rem;
-    align-items: center;
-    justify-content: space-evenly;
-    margin: 2rem;
-    font-size: 1.2rem;
-    font-weight: bold;
+    flex-direction: column;      
     text-transform: uppercase;
     color: white;
-    border: 3px solid orange;
+    margin-top: 1rem;
 }
-.appointment .formulario .input-box select {
+.appointment .formulario .input-box span {
+    margin-bottom: 1rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+.appointment .formulario .right-input-container .input-box select {
     width: 90%;
     padding: .5rem;
     font-size: 1rem;
     border: none;
     outline: none;
-    margin-top: 6px;
-    border-radius: 5px;
-    background-color: #eeeeeeaa;
+    color: #eee;
+    border-bottom: 3px solid #eee;
+    margin: 1rem 0;
+    background-color: transparent;
 }
-.appointment .formulario .input-box textarea {
+.appointment .formulario .right-input-container .input-box textarea {
     border: none;
     outline: none;
     resize: none;
     margin-top: 6px;
     width: 90%;
+    height: 160px;
     border-radius: 5px;
-    background-color: #eeeeeeaa;
+    background-color: rgba(0, 0, 0, 0.2);
     padding: .8rem 1rem;
-}
-.appointment .formulario .input-box input {
-    width: 60%;
-    padding: 1rem 1.4rem;
+    color: #eee;
     font-size: 1.2rem;
+}
+.left-input-container .input-box input {
+    width: 80%;
+    padding: .6rem .4rem;
+    font-size: 1.1rem;
     border: none;
+    border-bottom: 3px solid #eee;
     outline: none;
-    margin-top: 4px;
-    border-radius: 5px;
-    background-color: #eeeeeeaa;
+    margin-top: .6rem;
+    background: transparent;
+}
+.appointment .formulario .input-box input::placeholder {
+    color: #fff;
 }
 /* .appointment button {
     background-color: var(--color-secondary);
